# Django-File-Manager

./: .env.example  Dockerfile  Makefile  README.md  compose.yml  entrypoint.sh  pyproject.toml  requirements-info.txt  requirements.txt
app/accounts/: admin.py  views.py
app/accounts/models/: __init__.py  profile.py  profiles.py  users.py
app/core/: celery.py  settings.py  urls.py
app/filemanager/: admin.py  views.py
app/filemanager/migrations/: 0002_file_type.py  0003_alter_folder_name.py
app/filemanager/models/: __init__.py  base.py  file.py
app/templates/: base.html
app/templates/filemanager/: content-list.html  search-list.html
app/templates/filemanager/includes/: file-details-modal.html  rename-file-modal.html
app/templates/registration/: logged_out.html
core/: entrypoint.sh
core/accounts/: views.py
core/accounts/api/v1/: serializers.py  views.py
core/accounts/migrations/: 0001_initial.py
core/accounts/tests/: test_accounts_api.py
core/core/: celery.py  settings.py  urls.py
core/filemanager/: admin.py  models.py  urls.py  views.py
core/filemanager/migrations/: 0001_initial.py  0002_file_type.py  0002_folder_slug.py  0003_alter_folder_name.py  0003_auto_20240529_0709.py
core/filemanager/models/: __init__.py  files.py  folders.py
core/filemanager/tests/: test_filemanager_views.py
core/templates/: base.html
core/templates/filemanager/: content-list.html  file-list.html  search-list.html
core/templates/filemanager/includes/: delete-file-modal.html  delete-folder-modal.html  modals-scripts.html  rename-file-modal.html  (+1 more)
