[project]
name = "django-file-manager"
version = "0.1.0"
description = "A Django-based file manager application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-mail-templated>=2.6.5",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg[validation]>=1.21.15",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "moviepy>=1.0.3",
    "pillow>=12.2.0",
    "python-decouple>=3.8",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "faker>=40.23.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.19",
]
